--- a/docs/sprintReviewDocuments/10.26_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/10.26_SprintReviewDocument.md
@@ -15,10 +15,10 @@ Lastly we created all the folders and markdown files for these diagrams.
 
 
 # Use Cases
-This is where information about [Use cases](usecases/UseCases.md) can be found. 
+This is where information about [Use cases](design/usecases/UseCases.md) can be found. 
 
 # Class Diagrams
-This is where information about [Class diagrams](classDiagrams/ClassDiagrams.md) can be found. 
+This is where information about [Class diagrams](design/classDiagrams/ClassDiagrams.md) can be found. 
 
 # Sequence Diagrams & Activity Diagrams
-This is where information about [Behavioral diagrams](BehavioralDiagrams/BehavioralDiagrams.md) can be found. 
+This is where information about [Behavioral diagrams](design/BehavioralDiagrams/BehavioralDiagrams.md) can be found. 
