--- a/docs/sprintReviewDocuments/10.26_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/10.26_SprintReviewDocument.md
@@ -10,5 +10,5 @@ From there, the four of us sat down and created our initial class diagram which 
   - Room
 
 We then created two sequence diagrams to show the order how actors interact with each other when assigning a task and during a task. 
-We also created a activity diagram to model the flow from one action to another while the simulation is making a task. 
+We also created an activity diagram to model the flow from one action to another while the simulation is making a task. 
 Lastly we created all the folders and markdown files for these diagrams.
