--- a/docs/sprintReviewDocuments/10.26_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/10.26_SprintReviewDocument.md
@@ -1,14 +1,15 @@
 10/26 Sprint Review
 
 For the first two weeks of this project, we focused on the design of the project. 
-We first started created a bunch of user stories and put them as cards in "New" in our project layout. 
-From there, the four of us sat down and created our initial class diagram which consists of 4 classes: 
+We first created user stories based off of our PBIs and put them as tickets in "New" in our project backlog. 
+From there, we created our initial class diagram which consists of 4 classes: 
 
   - Robot
   - Simulation
   - Task
   - Room
 
-We then created two sequence diagrams to show the order how actors interact with each other when assigning a task and during a task. 
+After we made our class diagrams, we made behavioral diagrams to model how the system would function together. 
+We created two sequence diagrams to show how actors interact with each other when assigning a task and during a task. 
 We also created an activity diagram to model the flow from one action to another while the simulation is making a task. 
-Lastly we created all the folders and markdown files for these diagrams.
+Lastly we put all of the behavioral diagrams in one folder and created a markdown file for these diagrams.
