--- a/docs/sprintReviewDocuments/11.9_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/11.9_SprintReviewDocument.md
@@ -1,7 +1,8 @@
 11/9 Sprint Review
 
 These last two weeks we focused on coding the four classes: Robot, Simulation, Task, Room. We also wrote the cmake of the project as well as the initial CLI to showcase
-  the methods in the classes. We also started to figure out how to output information into a csv file and have hardcoded examples to showcase in the CLI.
+  the methods in the classes. We also started to figure out how to output information into a csv file and have hardcoded examples to showcase outputting information to a 
+  csv file..
 
 What went well:
   - Continuing to have specific work for every person in between meeting sessions. This was part of our plan to improve last sprint review and we think we did really well
