--- a/docs/sprintReviewDocuments/11.16_Standup.md
+++ b/docs/sprintReviewDocuments/11.16_Standup.md
@@ -1,1 +1,1 @@
-- Henry: something 
+- Henry: Fixed the #include statements in our classes to remove any circular relationship. I also wrote the random number generator for Robot probFailure. I also cleaned up the Room constructors and made sure that the nextID was incrementing properly. I wrote the printCurrentRobots method in Room. I also updated the CLI to use the proper Room constructor which allows it to read inputs as well as cleaned the CLI up visually.
