--- a/docs/sprintReviewDocuments/11.16_Standup.md
+++ b/docs/sprintReviewDocuments/11.16_Standup.md
@@ -1,3 +1,4 @@
 - Henry: Fixed the #include statements in our classes to remove any circular relationship. I also wrote the random number generator for Robot probFailure. I also cleaned up the Room constructors and made sure that the nextID was incrementing properly. I wrote the printCurrentRobots method in Room. I also updated the CLI to use the proper Room constructor which allows it to read inputs as well as cleaned the CLI up visually.
 - Zhengtao: Added a id increment to the robot which can assign to each robot. I also added a destination which link to a Room object using pointer, and I did some testing for them.
 - Lauren: Wrote the creatTask method in Simulation and found bugs to fix.
+- Ditrick: Worked on the csv file: (1) CSV file is updated in real time as variables change (2) stores real data, fixed the invalid input error and did some testing and clean-up.
