--- a/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
@@ -19,7 +19,7 @@ Plans to improve processes
 
 
 Individual Contributions
-  - Henry: I wrote the Robot class and header files. I also wrote the print methods for both task and room. I also tested some functionality in our CLI.
-  - Zhengtao: I updated some functions in the simulation and robot, and fixed errors. I also made our cmake file and did testing.
-  - Lauren: I wrote the Main.cpp program that runs the CLI and wrote the print statements for Simulation. I also fixed errors.
-  - Ditrick: I wrote the Task class and header files. I added a output to csv file feature, fixed errors, cleaned repos, and worked on cmake and its testing.
+  - Henry: 
+  - Zhengtao: 
+  - Lauren: 
+  - Ditrick: 
