--- a/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
@@ -19,7 +19,9 @@ Plans to improve processes
 
 
 Individual Contributions
-  - Henry: 
+  - Henry:
+    I wrote the thread to simulate logical time so that the robots are unavailable for a specific amount of time. After doing this I changed the vectors showing available / unavailable robots to a map to remove errors. I also changed robot battery life to coorelate to robotSize and changed moptime / scrubtime / vaccumtime to coorelate with roomSize. I also changed the CLI to always create Room 0 as a home base. I also helped change createTask to write it in one for-loop. 
+    From Standup: Fixed the #include statements in our classes to remove any circular relationship. I also wrote the random number generator for Robot probFailure. I also cleaned up the Room constructors and made sure that the nextID was incrementing properly. I wrote the printCurrentRobots method in Room. I also updated the CLI to use the proper Room constructor which allows it to read inputs as well as cleaned the CLI up visually.
   - Zhengtao: 
   - Lauren: 
   - Ditrick: 
