--- a/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
@@ -1,22 +1,20 @@
 11/30 Sprint Review
 
-These last two weeks, we focused:
+11/30 Sprint Review
+
+These last two weeks, we wrote the createTask method and polished the CLI to have a functional way to send robots to clean rooms. We created a thread to add logical time into our program allowing for robots to be unavailable for certain amounts of real time. We changed one of the data structures to fix segfault errors we were having in our thread. Changed the csv to have real data from our program.
 
 What went well:
-  - Continuing to have specific work for every person in between meeting sessions. This was part of our plan to improve last sprint review and we think we did really well
-      on this.
-  - We divided work well: trying to always have four tasks that need to be done before the next meeting/class period. Having four classes to code helped with splitting
-      up work evenly.
-  - Meeting on Monday's from 5pm - 6pm was very helpful for setting work due dates and catch up on what has been completed and what needs to be done
+  - We were able to do a lot of work during this sprint compared to the previous ones.
 
 What did not go well:
-  - Our repo organization was not as good as last sprint. We had multiple merge conflicts that we had to resolve (which we did).
-  - We were a bit inefficient to start this sprint in terms of work done which we were able to pick up with extra work in the back half of the sprint.
+  - We could have planned what everyone was doing better.
+  - Multiple people that were working together on tasks not communicating well.
     
 Plans to improve processes
-  - Starting the sprint strong with tangible tasks we can complete early on.
-  - Having stronger communication about what we are working on in our repo to avoid merge conflicts.
-
+  - More communciation especially when working on the same tasks.
+  - Better planning on what to work on.
+  - Be more clear on what tasks are assigned to who.
 
 Individual Contributions
   - Henry:
