--- a/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
@@ -20,6 +20,6 @@ Individual Contributions
   - Henry:
     I wrote the thread to simulate logical time so that the robots are unavailable for a specific amount of time. After doing this I changed the vectors showing available / unavailable robots to a map to remove errors. I also changed robot battery life to coorelate to robotSize and changed moptime / scrubtime / vaccumtime to coorelate with roomSize. I also changed the CLI to always create Room 0 as a home base. I also helped change createTask to write it in one for-loop. 
     From Standup: Fixed the #include statements in our classes to remove any circular relationship. I also wrote the random number generator for Robot probFailure. I also cleaned up the Room constructors and made sure that the nextID was incrementing properly. I wrote the printCurrentRobots method in Room. I also updated the CLI to use the proper Room constructor which allows it to read inputs as well as cleaned the CLI up visually.
-  - Zhengtao: 
+  - Zhengtao: I modified the original create Task function and added a helper to enable it to communicate with room and robot. I modified the robot constructor and room constructor to make user assign task with room id (then improved by others), and implement the correlated CLI for it. I also fixed minor errors.
   - Lauren: Wrote create task method, added cleaning status to the Room class, and fixed bugs.
   - Ditrick: 
