--- a/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/11.30_SprintReviewDocument.md
@@ -22,4 +22,4 @@ Individual Contributions
     From Standup: Fixed the #include statements in our classes to remove any circular relationship. I also wrote the random number generator for Robot probFailure. I also cleaned up the Room constructors and made sure that the nextID was incrementing properly. I wrote the printCurrentRobots method in Room. I also updated the CLI to use the proper Room constructor which allows it to read inputs as well as cleaned the CLI up visually.
   - Zhengtao: I modified the original create Task function and added a helper to enable it to communicate with room and robot. I modified the robot constructor and room constructor to make user assign task with room id (then improved by others), and implement the correlated CLI for it. I also fixed minor errors.
   - Lauren: Wrote create task method, added cleaning status to the Room class, and fixed bugs.
-  - Ditrick: 
+  - Ditrick: I mainly working on creating CSV function so that it now accepts real data and can be called anywhere in the program. Also, worked to translate the civ feature to a MongoDB database (unfinished). Working on fixing errors as I encountered them. 
