--- a/docs/sprintReviewDocuments/12.7_Standup.md
+++ b/docs/sprintReviewDocuments/12.7_Standup.md
@@ -1,4 +1,4 @@
-- Henry: 
+- Henry: I continued adding to the thread to make it so that rooms become clean after the task.
 - Zhengtao: 
 - Lauren: 
 - Ditrick: 
