--- a/docs/sprintReviewDocuments/12.7_Standup.md
+++ b/docs/sprintReviewDocuments/12.7_Standup.md
@@ -1,4 +1,4 @@
 - Henry: I continued adding to the thread to make it so that rooms become clean after the task. I also created a option in the CLI to set a room to DO NOT CLEAN.
 - Zhengtao: I am working on the work time calculation and battery update function for robots.
 - Lauren: 
-- Ditrick: 
+- Ditrick: Completed the CSV features, changed the implementation of the MongoDB database to a class, and added a class diagram for it as well.
