--- a/docs/sprintReviewDocuments/12.14_StandupReviewDocument.md
+++ b/docs/sprintReviewDocuments/12.14_StandupReviewDocument.md
@@ -1,1 +1,24 @@
+12/14 Sprint Review
 
+These last three weeks we focused finishing our program to be a deliverable product. We polished our threads so that the simulation can continiously run with rooms becoming clean and robots being able to be charged. We also added probFailure into our program so robots fail on a grade from 1-5 if a certain situation is reached. Tasks are now completed as well.
+
+What went well:
+  - We divided work very well again. Everyone worked on a lot during this sprint and we allocated work very well.
+  - Great communication. We did not run into problems with people working on the same task because we had good communication during our meetings as well as through our group chats.
+  - We were able to debug efficiently during this sprint. Since this was our last sprint, we had some last minute errors we needed to fix and were able to do that easily together.
+
+What did not go well:
+  - 
+    
+Plans to improve processes:
+  - If we had more time, we would want to add a couple features to our program.
+  - We would want robots to automatically start charging when they come back from a task.
+  - We would want rooms to become dirty randomally over time instead of it being a manual switch.
+  - We would want the simulation to automatically assign robots to a task based off efficiency instead of the one that comes first.
+  - We would want to be able to send a new robot to a task if one fails.
+
+Individual Contributions
+  - Henry: I continued to add to the thread allowing tasks to become completed and rooms to become clean when all the allocated robots leave. I also added the robot failure method to the thread so that a message gets displayed on the CLI as well as the time the robot is at the task is increased depending on the grade of failure. I also updated the first use case diagram as well as the AssignTask diagram.
+  - Zhengtao: 
+  - Lauren: 
+  - Ditrick: 
