Update and rename 12.14_StandupReviewDocument.md to 12.14_SprintReviewDocument.md

--- a/docs/sprintReviewDocuments/12.14_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/12.14_SprintReviewDocument.md
@@ -8,7 +8,7 @@ What went well:
   - We were able to debug efficiently during this sprint. Since this was our last sprint, we had some last minute errors we needed to fix and were able to do that easily together.
 
 What did not go well:
-  - 
+  - Very sucessful sprint.
     
 Plans to improve processes:
   - If we had more time, we would want to add a couple features to our program.
