--- a/docs/sprintReviewDocuments/12.14_SprintReviewDocument.md
+++ b/docs/sprintReviewDocuments/12.14_SprintReviewDocument.md
@@ -21,4 +21,4 @@ Individual Contributions
   - Henry: I continued to add to the thread allowing tasks to become completed and rooms to become clean when all the allocated robots leave. I also added the robot failure method to the thread so that a message gets displayed on the CLI as well as the time the robot is at the task is increased depending on the grade of failure. I also updated the first use case diagram as well as the AssignTask diagram.
   - Zhengtao: I updated the charge method so that it can charge battery life over time by using multiple threading for each charging robot. I also update diagrams in the design document.
   - Lauren: I wrote Catch2 tests, updated the class diagram, and wrote the user guide.
-  - Ditrick: 
+  - Ditrick: Finished the mongoDB database, add more features to CSV, updated usercases
